// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search View matches the snapshot 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Search
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="px-2"
  >
    <input
      aria-label="search-input"
      class="w-full mb-4 p-1 text-xl text-center bg-gray-200 dark:bg-gray-600 border border-solid border-gray-800 focus:border-gray-400"
      placeholder="Search..."
      type="search"
      value=""
    />
  </div>
  <div
    class="absolute left-1/2 top-1/2 m-auto w-96 h-48 -ml-48 -mt-24 flex flex-col items-center justify-center"
  >
    <img
      alt="Neutral illustration"
      class="opacity-80 mb-2.5"
      src="/neutral.png"
      width="80"
    />
    <p>
      No results to display.
    </p>
  </div>
</DocumentFragment>
`;

exports[`Search View matches the snapshot when error 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Error
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="px-2 py-2.5 bg-red-400 bg-opacity-50 border border-solid border-red-400 p-2.5"
  >
    <div
      class="flex flex-col items-center justify-center"
    >
      <img
        alt="Frustrated Illustration"
        class="opacity-80 mb-2.5"
        src="/frustrated.png"
        width="80"
      />
    </div>
    <h2
      class="font-bold"
    >
      Error
    </h2>
    <p>
      Generic error
    </p>
  </div>
</DocumentFragment>
`;

exports[`Search View matches the snapshot when loading 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Search
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="px-2"
  >
    <input
      aria-label="search-input"
      class="w-full mb-4 p-1 text-xl text-center bg-gray-200 dark:bg-gray-600 border border-solid border-gray-800 focus:border-gray-400"
      placeholder="Search..."
      type="search"
      value=""
    />
  </div>
  <div
    class="flex flex-row flex-wrap px-2"
  >
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-800"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 w-full h-16 bg-gray-800 p-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search View matches the snapshot with data 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Search
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="px-2"
  >
    <input
      aria-label="search-input"
      class="w-full mb-4 p-1 text-xl text-center bg-gray-200 dark:bg-gray-600 border border-solid border-gray-800 focus:border-gray-400"
      placeholder="Search..."
      type="search"
      value=""
    />
  </div>
  <div
    class="flex flex-row flex-wrap px-2"
  >
    <div
      class="w-1/3 sm:w-1/4 md:w-1/5 p-1"
    >
      <a
        class="flex flex-col bg-gray-200 dark:bg-gray-800 h-full border-b-2 border-solid border-green-500 shadow"
        href="/show/216"
      >
        <div
          class="h-0 relative box-border p-1 border-2 border-gray-200 dark:border-gray-800"
          style="padding-top: 140.47619047619045%;"
        >
          <div
            class="animate-pulse bg-gray-700 absolute top-0 left-0 w-full h-full bg-gray-800"
          />
          <img
            alt="Rick and Morty"
            class="absolute top-0 left-0 w-full h-full hidden"
            src="undefined/uploads/images/medium_portrait/1/3603.jpg"
          />
        </div>
        <div
          class="min-h-16 flex-grow flex flex-col justify-around items-center p-2"
        >
          <p
            class="text-center"
          >
            Rick and Morty
          </p>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search View matches the snapshot with no data 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Search
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="px-2"
  >
    <input
      aria-label="search-input"
      class="w-full mb-4 p-1 text-xl text-center bg-gray-200 dark:bg-gray-600 border border-solid border-gray-800 focus:border-gray-400"
      placeholder="Search..."
      type="search"
      value=""
    />
  </div>
  <div
    class="absolute left-1/2 top-1/2 m-auto w-80 h-96 -ml-40 -mt-48 flex flex-col items-center justify-center"
  >
    <img
      alt="Frustrated illustration"
      class="opacity-80 mb-2.5"
      src="/frustrated.png"
      width="80"
    />
    <p>
      No shows match your search query.
    </p>
  </div>
</DocumentFragment>
`;
